# BTrade

./: .dockerignore  .env.example  .gitignore  =3.20.1  CLAUDE.md  Dockerfile  README.md  app.py  config.json  portfolio.json  pyproject.toml  requirements.txt  run_bot.py  trades.db-shm
analysis/: btc_correlation_analysis.py  correlation_analysis.py  deep_pattern_analysis.py  dynamic_portfolio.py  final_portfolio_analysis.py  historical_validation.py  ibit_specific_thursday.py  intraday_crash_analysis.py  promising_strategies.py  signal_optimization.py  smart_portfolio.py  strategy_analysis_results.csv  strategy_deep_analysis.py  thursday_emergence.py
docs/: PROFITABLE_STRATEGIES_REPORT.md  SECURITY_REVIEW.md  STRATEGY_GUIDE.md  STRATEGY_VALIDATION_REPORT.md  architecture.md  deployment-plan.md  epics.md  prd.md  uizard-prompts.md  ux-design-specification.md
legacy/: app_legacy.py  run_backtests.py  run_bitx_backtest.py
patterns/: active_patterns.json
scripts/: backtest_10am_dump.py  etrade_setup.py
src/: __init__.py  async_utils.py  backtester.py  config.py  data_providers.py  database.py  email_reports.py  error_alerting.py  etrade_client.py  historical_simulator.py  multi_strategy_backtester.py  notifications.py  pattern_discovery.py  scheduler.py  smart_scheduler.py  smart_strategy.py  strategies.py  strategy.py  strategy_review.py  telegram_bot.py  trading_bot.py  trailing_hedge.py  utils.py  worker.py
tests/: __init__.py  test_async_utils.py  test_backtester.py  test_database.py  test_integration_async.py  test_smart_strategy.py  test_strategy.py  (+1 more)
(+29 files in other folders)
